# Athi

./: .CMakeLists.txt.swp  .clang-format  .gitignore  CMakeLists.txt  README.md  athi  athi.h  build.bat  build_win32.bat  imgui.ini  main.cpp  todo.txt  unix_build.bash
Athi.xcodeproj/: project.pbxproj
Athi.xcodeproj/project.xcworkspace/xcuserdata/marcusmathiassen.xcuserdatad/: UserInterfaceState.xcuserstate
Athi.xcodeproj/project.xcworkspace/xcuserdata/mathiassen.xcuserdatad/: UserInterfaceState.xcuserstate
Athi.xcodeproj/xcuserdata/marcusmathiassen.xcuserdatad/xcschemes/: Athi.xcscheme  xcschememanagement.plist
Athi.xcodeproj/xcuserdata/mathiassen.xcuserdatad/xcschemes/: Athi.xcscheme  xcschememanagement.plist
OptimizationProfiles/: athi.profdata
Resources/: Info.plist  athi_circle_shader.fs  athi_circle_shader.vs  athi_fullscreen_quad.fs  athi_fullscreen_quad.vs  athi_line_shader.gs  athi_line_shader.vs  athi_particle_shader.fs  athi_rect_shader.fs  athi_rect_shader.vs  billboard_particle_shader.vert  circle_collision_kernel.cl  default_line_shader.vert  default_particle_shader.frag  particle_collision.cl  text_shader.fs  text_shader.vs
Resources/Kernels/: particle_collision.cl
Resources/Shaders/: athi_fullscreen_quad.frag  athi_fullscreen_quad.fs  athi_fullscreen_quad.vert  athi_fullscreen_quad.vs  basic_text.frag  basic_text.vert  billboard_particle_shader.frag  billboard_particle_shader.vert  blurs.glsl  common.glsl  default_circle_shader.frag  default_circle_shader.vert  default_line_shader.frag  default_line_shader.geom  default_line_shader.vert  default_particle_shader.frag  default_particle_shader.vert  default_rect_shader.frag  default_rect_shader.vert  immidiate_circle.frag  immidiate_circle.vert  metaballs.glsl
dep/Universal/: imgui.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
dep/Universal/spdlog/fmt/bundled/: format.cc
dep/Windows/: glfw3.lib
dep/macOS/glm/gtx/: transform.hpp
res/: athi_rect_shader.fs
src/: # usr:bin:bash!  ThreadPool.h  athi.h  athi.sln  athi.vcxproj  athi.vcxproj.filters  athi_buffer.h  athi_button.h  athi_camera.cpp  athi_camera.h  athi_checkbox.cpp  athi_checkbox.h  athi_circle.cpp  athi_circle.h  athi_core.cpp  athi_core.h  athi_core_renderer.cpp  athi_core_renderer.h  athi_dispatch.cpp  athi_dispatch.h  athi_framebuffer.h  athi_gui.h  athi_input.cpp  athi_input.h  athi_line.cpp  athi_line.h  athi_opencl.h  athi_particle.cpp  athi_particle.h  athi_physics_engine.h  athi_profiler.h  athi_quadtree.cpp  athi_quadtree.h  athi_quadtree_v2.cpp  athi_quadtree_v2.h  athi_rect.cpp  athi_rect.h  athi_renderer.cpp  athi_renderer.h  athi_resource.cpp  (+38 more)
src/Physics/: athi_spring.h
src/Renderer/: athi_buffer.cpp  athi_buffer.h  athi_camera.cpp  athi_camera.h  athi_circle.cpp  athi_circle.h  athi_commandbuffer.h  athi_framebuffer.cpp  athi_framebuffer.h  athi_line.cpp  athi_line.h  athi_primitives.h  athi_rect.cpp  athi_rect.h  athi_renderer.cpp  athi_renderer.h  athi_shader.cpp  athi_shader.h  athi_text.cpp  athi_text.h  athi_texture.cpp  athi_texture.h  mesh.h  opengl_utility.h
src/Utility/: athi_config_parser.cpp  athi_config_parser.h  athi_constant_globals.h  athi_globals.h  athi_save_state.h  console.cpp  console.h  fixed_size_types.h  library.h  math_types.h  mm_math.h  profiler.cpp  profiler.h  threadsafe_container.cpp  threadsafe_container.h
src/spdlog/fmt/bundled/: format.h
